--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -37,6 +37,7 @@
 				<div class="release">Lançamento {{ book.publication }}</div>
 				<div class="actions">
 					<app-button
+						class="reading-btn"
 						(click)="continueReading()"
 						variant="primary"
 						rounded="small"
