--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -127,6 +127,7 @@ $page-size: 1200px;
 					@media (max-width: 768px) {
 						font-size: 2rem;
 						line-height: 3rem;
+						text-align: center;
 					}
 
 					&.placeholder {
@@ -135,6 +136,10 @@ $page-size: 1200px;
 				}
 
 				h6 {
+					@media (max-width: 768px) {
+						text-align: center;
+					}
+
 					&.placeholder {
 						height: 2rem;
 					}
@@ -156,6 +161,13 @@ $page-size: 1200px;
 					align-items: center;
 					gap: 0.75rem;
 					margin-top: 1rem;
+
+					.reading-btn {
+						@media (max-width: 768px) {
+							width: 90%;
+							max-width: 300px;
+						}
+					}
 
 					@media (max-width: 768px) {
 						justify-content: center;
