--- a/front/src/app/pages/books/books.component.scss
+++ b/front/src/app/pages/books/books.component.scss
@@ -17,9 +17,10 @@
 
 .filter {
 	position: relative;
-	max-width: calc(255px * 4.5);
+	max-width: calc(255px * 5);
 	margin: auto auto;
 	margin-top: 40px;
+	padding: 0 20px;
 }
 
 .controller {
@@ -85,7 +86,9 @@
 		border-radius: 15px;
 		border: 4px solid var(--app-text-color);
 		cursor: pointer;
-		transition: background-color 0.3s ease, color 0.3s ease;
+		transition:
+			background-color 0.3s ease,
+			color 0.3s ease;
 		aspect-ratio: 1/1;
 		font-size: 1.2rem;
 
