feat: refactor IconsComponent for improved icon loading and change detection

--- a/front/src/app/components/icons/icons.component.html
+++ b/front/src/app/components/icons/icons.component.html
@@ -1,1 +1,1 @@
-<div #container class="icon-container" [innerHTML]="svgContent()"></div>
+<div class="icon-container" [innerHTML]="svgContent()"></div>
